# hack-parallel-example

./: .gitignore  Makefile  README.md  dune  example_hack_parallel.opam
src/: dune  main.ml  main_with_shared_memory.ml
