opam-version: "1.2"
version: ""
maintainer: "rvantonder@gmail.com"
authors: "Rijnard van Tonder"
homepage: "https://github.com/rvantonder/hack-parallel-example"
bug-reports: "https://github.com/rvantonder/hack-parallel-example/issues"
dev-repo: "https://github.com/rvantonder/hack-parallel-example.git"
license: "MIT"
build: [["dune" "build" "-p" name "-j" jobs "@install"]]
build-test: [["dune" "runtest" "-p" name "-j" jobs]]
depends: [
  "core"
  "hack_parallel"
]
